<resources>
    <string name="appName">督督安全家人端</string>
    <string name="DrivingMonitor">驾车督察</string>

    <string name="deviceManagement">设备管理</string>
    <string name="accountManagement">个人信息</string>

    <string name="activityTitle">界面标题</string>

    <string name="emergencyContact">紧急联系人</string>
    <string name="familyMember">亲情号</string>
    <string name="healthReport">健康报告</string>
    <string name="locationService">位置服务</string>
    
    <string name="currentMonitoring">当前监测：</string>

    //登录注册词句
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="welcome">欢迎使用驾车督察</string>
    <string name="welcomePlus">使用驾车督察\t\t\t\t开启安全旅程</string>
    <string name="phoneNumberHint">请输入手机号</string>
    <string name="userHint">请输入账号</string>
    <string name="passwordHint">请输入密码</string>
    <string name="rememberPassword">记住密码?</string>
    <string name="passwordConfirmHint">请再次输入密码</string>
    <string name="registerTip">没有账号?点击注册</string>
    <string name="loginProtocolTip">我已阅读并同意</string>
    <string name="userUsageProtocol">《用户使用协议》</string>

    //状态词句
    <string name="state">状态</string>
    <string name="noCondition">状态未知</string>
    <string name="goodCondition">状态良好</string>
    <string name="badCondition">状态异常!!!</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>

    //提示词句
    <string name="enter">进入</string>
    <string name="quit">退出</string>
    <string name="delete">删除</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="refresh">刷新</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>

    <string name="noData">---</string>
    <string name="splitLine">/</string>

    <string name="goodState">请小心驾驶！</string>
    
    //心率词句
    <string name="heartRate">心率</string>
    <string name="data75">75</string>
    <string name="unitHeartRate">次/分</string>

    //异常状态词句
    <string name="abnormalState">异常状态</string>
    <string name="noAbnormalState">无</string>
    <string name="makePhoneCall">接打电话</string>
    <string name="smoke">抽烟</string>
    <string name="drink">喝水</string>
    
    //空气酒精浓度词句
    <string name="alcoholConcentration">空气酒精浓度检测</string>
    <string name="drunkDrivingTip">空气酒精浓度超过3%将被判断为酒后驾驶</string>
    <string name="unitAlcoholConcentration">%</string>
    <string name="noDrunkDriving">未酒后驾驶</string>
    <string name="DrunkDriving">酒后驾驶</string>

    //体温词句
    <string name="temperature">体温</string>
    <string name="data36.6">36.6</string>
    <string name="unitTemperature">摄氏度</string>

    //呼吸频率词句
    <string name="respiratoryRate">呼吸频率</string>
    <string name="data19">19</string>
    <string name="unitRespiratoryRate">次/分</string>

    //疲劳状态词句
    <string name="fatigueState">疲劳状态</string>
    <string name="fatigueNormal">正常</string>
    <string name="fatigueMild">轻度</string>
    <string name="fatigueExcessive">过度</string>

    //心律失常词句
    <string name="rhythmState">心律状态</string>
    <string name="rhythmNormal">正常</string>
    <string name="rhythmAbnormal">失常</string>

    //血压词句
    <string name="bloodPressure">血压</string>
    <string name="data120">120</string>
    <string name="data70">70</string>
    <string name="unitBloodPressure">mmHg</string>

    //微循环词句
    <string name="microCirculation">微循环</string>
    <string name="data81">81</string>
    <string name="unitMicroCirculation">%</string>

    //血氧饱和度词句
    <string name="bloodOxygen">血氧饱和度</string>
    <string name="data99">99</string>
    <string name="unitBloodOxygen">%</string>

    //紧急联系人词句
    <string name="addContact">设置亲情号</string>
    <string name="deleteContact">删除该紧急联系人</string>
    <string name="contactName">紧急联系人姓名</string>
    <string name="contactNumber">联系方式</string>

    //亲情号词句
    <string name="memberUser">请输入家人的账号</string>
    <string name="memberPassword">请输入密码</string>
    <string name="refreshMember">重置亲情号</string>

    //信息管理词句
    <string name="accountHeadSculpture">头像</string>
    <string name="accountNameInitially">行车监督管理员</string>
    <string name="accountName">昵称</string>
    <string name="accountSex">性别</string>
    <string name="accountAge">年龄</string>
    <string name="unitAge">岁</string>
    <string name="accountDrivingAge">驾龄</string>
    <string name="unitDrivingAge">年</string>
    <string name="accountNumber">13548073334</string>
    <string name="logout">退出登录</string>
    <string name="accountNameHint">输入新昵称</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    //设备管理词句
    <string name="deviceRaspberry">树莓派</string>
    <string name="deviceCamera">前置摄像头</string>
    <string name="deviceSensor">酒精传感器</string>
    <string name="deviceWatch">智能穿戴设备</string>
    <string name="connection">已成功建立通信</string>
    <string name="connecting">正在建立通信</string>
    <string name="disconnection">未连接</string>
    <string name="requestState">正在获取连接状态</string>

    //地图词句
    <string name="locationTemp">四川省成都市青白江区栖凤街</string>

    //通知词句
    <string name="notificationTitle">状态异常提示</string>
    <string name="notificationContent">您的家人实时健康指标异常，点击查看</string>
</resources>