<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_slide">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/remindBarHeight"
        android:layout_marginStart="@dimen/marginBig"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginBig"
        android:layout_marginBottom="@dimen/marginNormal">

        <ImageButton
            android:id="@+id/cancelAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/mark_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addContact"
            android:textSize="@dimen/textNormal"
            android:textColor="@color/colorTextNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirmAddContact"
            app:layout_constraintStart_toEndOf="@+id/cancelAddContact"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/confirmAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/mark_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBig"
        android:layout_marginEnd="@dimen/marginBig"
        android:hint="@string/contactName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textNormal"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBig"
        android:layout_marginEnd="@dimen/marginBig"
        android:layout_marginBottom="@dimen/marginHuge"
        android:hint="@string/contactNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textNormal"
            android:inputType="phone"
            android:maxLength="11" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>