<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_slide">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/remindBarHeight"
        android:layout_marginStart="@dimen/marginBig"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginBig"
        android:layout_marginBottom="@dimen/marginNormal">

        <ImageButton
            android:id="@+id/cancelModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/mark_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cancel" />

        <TextView
            android:id="@+id/modifyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textNormal"
            android:textColor="@color/colorTextNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirmModify"
            app:layout_constraintStart_toEndOf="@+id/cancelModify"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/confirmModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/mark_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editAccountName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginStart="@dimen/marginGreat"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginGreat"
        android:layout_marginBottom="@dimen/marginGreat"
        android:paddingStart="@dimen/paddingNormal"
        android:paddingEnd="@dimen/paddingNormal"
        android:textSize="@dimen/textNormal"
        android:background="@drawable/shape_edit"
        android:hint="@string/accountNameHint"
        android:autofillHints=""
        android:inputType="text"
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/chooseAccountSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginGreat"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginGreat"
        android:layout_marginBottom="@dimen/marginGreat"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/chooseMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginHuge"
            android:text="@string/man"/>

        <RadioButton
            android:id="@+id/chooseWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHuge"
            android:text="@string/woman"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/pickAccountAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginGreat"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginGreat"
        android:layout_marginBottom="@dimen/marginGreat"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <NumberPicker
            android:id="@+id/pickAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginNormal"
            android:layout_gravity="center"
            android:text="@string/unitAge"
            android:textSize="@dimen/textNormal"
            android:textColor="@color/colorTextNormal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pickAccountDrivingAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginGreat"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/marginGreat"
        android:layout_marginBottom="@dimen/marginGreat"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <NumberPicker
            android:id="@+id/pickDrivingAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginNormal"
            android:layout_gravity="center"
            android:text="@string/unitDrivingAge"
            android:textSize="@dimen/textNormal"
            android:textColor="@color/colorTextNormal"/>

    </LinearLayout>

</LinearLayout>